--- a/mayor a menor.html
+++ b/mayor a menor.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ejercicio ###</title>
+    <title>mayor a menor</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+
+        <a class="logo">varios</a>  
+        <div class="titulo">
+            <h1>Recuperatorio</h1>
+        </div>
+    </header>
+
+    <div class="subtitulo">
     <input type="number" id="nro">
     <button onclick="insertar()">Insertar</button>
     <button onclick="insertarRandom()">Insertar random</button>
@@ -14,6 +24,32 @@
     <span><b>Cantidad de numeros en el vector:</b><span id="cnt">0</span></span>
 
     <div id="res"></div>
+    </div>
+
+
+
+
+
+<div class="inferior">
+  <div class="pinta">
+      <div>
+          contactos
+      </div>
+      <div>
+          politica y privacidad
+      </div>
+      <div>
+          cokies
+      </div>
+  </div>
+  <div class="copirng">
+      Copyright 2021- 2021 Grover Angel Technology Inc. Todos los derechos reservados.
+  </div>
+</div>
+
+
+
+
 <script>
     let vector = [];
 
@@ -52,5 +88,6 @@
         mostrar(y)
     }
 </script>
+
 </body>
 </html>
