--- a/recuperatorio.html
+++ b/recuperatorio.html
@@ -2,20 +2,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-
+	<title>arreglos</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 	<header>
-		<h1>Operaciones con Arreglos</h1>
-	</header>
-	<article>
-            <div class="vector">
-                <br>La suma de los numeros positivos del vector : [15,-6,0,8,-2,5,4,-10,0,5,3]</br>
-            </div>
-			<div class="calculos" id="salida">	    
-			</div>
 
+		<a class="logo">varios</a>  
+		<div class="titulo">
+			<h1>Recuperatorio</h1>
+		</div>
+	</header>
+	<div class="subtitulo">
+
+		
+		<div class="vector">
+		<br>La suma de los numeros positivos del vector : [15,-6,0,8,-2,5,4,-10,0,5,3]</br>
+	</div>
+	<div class="calculos" id="salida">	    
+	</div>
+	</div>
+	
+            
+	
+	
+	<div class="inferior">
+		<div class="pinta">
+			<div>
+				contactos
+			</div>
+			<div>
+				politica y privacidad
+			</div>
+			<div>
+				cokies
+			</div>
+		</div>
+		<div class="copirng">
+			Copyright 2021- 2021 Grover Angel Technology Inc. Todos los derechos reservados.
+		</div>
 
 <script type="text/javascript">
 	var arreglo = [15,-6,0,8,-2,5,4,-10,0,5,3];
