--- a/5000.html
+++ b/5000.html
@@ -4,12 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>5000</title>
+    <title>4000</title>
+    <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
-    <div>introducir 1 y mostrar el primer numero impar que al cubo sea mayor a 4000</div>
+    <header>
+
+		<a class="logo">varios</a>  
+		<div class="titulo">
+			<h1>Recuperatorio</h1>
+		</div>
+	</header>
+    <div class="subtitulo">
+        <div>introducir 1 y mostrar el primer numero impar que al cubo sea mayor a 4000</div>
     <button onclick="insertar()">Iniciar busqueda</button>
+    </div>
+
+    <div class="inferior">
+        <div class="pinta">
+            <div>
+                contactos
+            </div>
+            <div>
+                politica y privacidad
+            </div>
+            <div>
+                cokies
+            </div>
+        </div>
+        <div class="copirng">
+            Copyright 2021- 2021 Grover Angel Technology Inc. Todos los derechos reservados.
+        </div>
+      </div>
     <script>
        function insertar(){
            var i = 0;
